// Vitest Snapshot v1

exports[`RenderAPI snapshots > commit-only synthetic entries (sourceCommit + no author url) 1`] = `
"## v4.1.0 (2026-04-05)

* commit abcdef1: Standalone commit
  - 📦 General
  - 👤 @ci-bot
  - <details>
      raw commit body
    </details>"
`;

exports[`RenderAPI snapshots > custom section/item templates 1`] = `
"## v4.0.0 (2026-04-05)

### Features
- [#40](https://github.com/acme/demo/issues/40) | Template driven entry | [@author](https://example.com/author) | [core](https://npmjs.com/package/@acme/core)"
`;

exports[`RenderAPI snapshots > default header + scope grouping 1`] = `
"## v2.0.0 (2026-04-05)

#### Features
* [#10](https://github.com/acme/demo/issues/10): Ship onboarding
  - 📦 Packages (2): [core](https://npmjs.com/package/@acme/core), [web](https://npmjs.com/package/@acme/web)
  - 👤 [@author](https://example.com/author)

#### Fixes
* [#11](https://github.com/acme/demo/issues/11): Fix race condition
  - 📦 [core](https://npmjs.com/package/@acme/core)
  - 👤 [@author](https://example.com/author)"
`;

exports[`RenderAPI snapshots > empty change list renders a friendly empty-state note 1`] = `
"## v4.0.5 (2026-04-05)

_No user-facing changes since the last tag._"
`;

exports[`RenderAPI snapshots > grouping none renders a flat list without sections 1`] = `
"## v4.0.1 (2026-04-05)

* [#50](https://github.com/acme/demo/issues/50): Add keyboard shortcuts
  - 📦 [web](https://npmjs.com/package/@acme/web)
  - 👤 [@author](https://example.com/author)
* [#51](https://github.com/acme/demo/issues/51): Handle null session
  - 📦 [core](https://npmjs.com/package/@acme/core)
  - 👤 [@author](https://example.com/author)"
`;

exports[`RenderAPI snapshots > item template can consume DETAILS and STATS placeholders 1`] = `
"## v4.0.4 (2026-04-05)

#### Documentation
* Add migration guide
  source=[#55](https://github.com/acme/demo/issues/55)
  stats=  - 📦 Packages (2): [cli](https://npmjs.com/package/@acme/cli), [core](https://npmjs.com/package/@acme/core)
  - 👤 [@author](https://example.com/author)
  details=  - <details>
      Step 1
      Step 2
    </details>"
`;

exports[`RenderAPI snapshots > large mixed release snapshot 1`] = `
"## v3.4.0 (2026-04-05)

#### Breaking
##### 📦 [core](https://npmjs.com/package/@acme/core)
* [#20](https://github.com/acme/demo/issues/20): Drop legacy auth
  - 📦 [core](https://npmjs.com/package/@acme/core)
  - 👤 [@author](https://example.com/author)

#### Features
##### 📦 [core](https://npmjs.com/package/@acme/core)
* [#21](https://github.com/acme/demo/issues/21): Add cache layer
  - 📦 [core](https://npmjs.com/package/@acme/core)
  - 👤 [@author](https://example.com/author)
##### 📦 [web](https://npmjs.com/package/@acme/web)
* [#22](https://github.com/acme/demo/issues/22): Add dashboard
  - 📦 [web](https://npmjs.com/package/@acme/web)
  - 👤 [@author](https://example.com/author)

#### Fixes
##### 📦 [web](https://npmjs.com/package/@acme/web)
* [#23](https://github.com/acme/demo/issues/23): Fix pagination
  - 📦 [web](https://npmjs.com/package/@acme/web)
  - 👤 [@author](https://example.com/author)
##### 📦 General
* [#24](https://github.com/acme/demo/issues/24): Fix typo
  - 📦 General
  - 👤 [@author](https://example.com/author)

#### Chores
##### 📦 [cli](https://npmjs.com/package/@acme/cli)
* [#25](https://github.com/acme/demo/issues/25): Bump deps
  - 📦 [cli](https://npmjs.com/package/@acme/cli)
  - 👤 [@author](https://example.com/author)
##### 📦 General
* [#26](https://github.com/acme/demo/issues/26): Refactor scripts
  - 📦 General
  - 👤 [@author](https://example.com/author)"
`;

exports[`RenderAPI snapshots > package grouping normalizes multi-package keys 1`] = `
"## v3.4.1 (2026-04-05)

#### Features
##### 📦 [core](https://npmjs.com/package/@acme/core) · [web](https://npmjs.com/package/@acme/web)
* [#30](https://github.com/acme/demo/issues/30): Ship shared auth layer
  - 📦 Packages (2): [core](https://npmjs.com/package/@acme/core), [web](https://npmjs.com/package/@acme/web)
  - 👤 [@author](https://example.com/author)
* [#31](https://github.com/acme/demo/issues/31): Expand auth docs
  - 📦 Packages (2): [core](https://npmjs.com/package/@acme/core), [web](https://npmjs.com/package/@acme/web)
  - 👤 [@author](https://example.com/author)"
`;

exports[`RenderAPI snapshots > package grouping renders normalized multi-package sections 1`] = `
"## v4.0.2 (2026-04-05)

#### Fixes
##### 📦 [core](https://npmjs.com/package/@acme/core) · [web](https://npmjs.com/package/@acme/web)
* [#52](https://github.com/acme/demo/issues/52): Align package order
  - 📦 Packages (2): [core](https://npmjs.com/package/@acme/core), [web](https://npmjs.com/package/@acme/web)
  - 👤 [@author](https://example.com/author)
* [#53](https://github.com/acme/demo/issues/53): Keep grouping stable
  - 📦 Packages (2): [core](https://npmjs.com/package/@acme/core), [web](https://npmjs.com/package/@acme/web)
  - 👤 [@author](https://example.com/author)"
`;

exports[`RenderAPI snapshots > section templates are ignored when grouping is none 1`] = `
"## v4.0.6 (2026-04-05)

* [#56](https://github.com/acme/demo/issues/56): Increase coverage for renderer
  - 📦 [core](https://npmjs.com/package/@acme/core)
  - 👤 [@author](https://example.com/author)"
`;

exports[`RenderAPI snapshots > template + package grouping + multiline body 1`] = `
"## Release v1.2.3 on 2026-04-05

#### Features
##### 📦 [core](https://npmjs.com/package/@acme/core)
* [#1](https://github.com/acme/demo/issues/1): Add dark mode
  - 📦 [core](https://npmjs.com/package/@acme/core)
  - 👤 [@alice](https://example.com/alice)
  - <details>
      Detailed note
      Second line
    </details>

#### Fixes
##### 📦 [cli](https://npmjs.com/package/@acme/cli)
* [#2](https://github.com/acme/demo/issues/2): Fix login
  - 📦 [cli](https://npmjs.com/package/@acme/cli)
  - 👤 [@bob](https://example.com/bob)

#### Chores
##### 📦 General
* [#3](https://github.com/acme/demo/issues/3): Minor cleanup
  - 📦 General
  - 👤 [@chris](https://example.com/chris)"
`;

exports[`RenderAPI snapshots > unknown package labels fall back to raw names with links when available 1`] = `
"## v4.0.3 (2026-04-05)

#### Features
* [#54](https://github.com/acme/demo/issues/54): Wire analytics hook
  - 📦 [sdk](https://npmjs.com/package/sdk)
  - 👤 [@author](https://example.com/author)"
`;
